# xml66

./: .gitignore  ChangeLog  LICENSE.md  NEWS  README.md  RELNOTES  meson.build  meson.options  work.sh
doc/latex/: make_pdf.sh
doc/latex/tex/: references.tex  xml66-library-guide.tex  xpath.tex
extras/git/: gitignore.dot
extras/wraps/: cfg66.wrap
include/: meson.build  xml66-config.h.in  xml66.hpp
include/utfcpp/: utf8.h
include/utfcpp/utf8/: checked.h  core.h  cpp11.h  cpp17.h  cpp20.h  unchecked.h
include/xml/: xml66xx.hpp
src/: meson.build  xml66.cpp
src/xml/: xml66xx.cpp
subprojects/: README  libcfg66.wrap  liblib66.wrap  potext.wrap
tests/: meson.build  xml66_tests.cpp
tests/data/: README  RosegardenPatchFile.xml
