#*****************************************************************************
# meson.options (xml66)
#-----------------------------------------------------------------------------
##
# \file        meson.options
# \library     xml66
# \author      Chris Ahlstrom
# \date        2026-02-20
# \updates     2026-02-20
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "xml66" library.
#
#  As of version 1.1, Meson uses "meson.options" in preference to
#  "meson_options.txt".
#
#  Options for xml66.
#
#-----------------------------------------------------------------------------

#-----------------------------------------------------------------------------
#  We do not need to append version numbers to the documents directory.
#-----------------------------------------------------------------------------

option('docdir',
   type : 'string',
   value : 'share/doc/xml66',
   description : 'Directory where Xml66 documentation is installed.',
   yield : true
)

#-----------------------------------------------------------------------------
# This option is checked only if xml66 is not used as a subproject.
#-----------------------------------------------------------------------------

option('enable-tests',
   type : 'boolean',
   value : true,
   description : 'Build the test program(s)'
)

#-----------------------------------------------------------------------------
# Potential usage of our translation library.
#-----------------------------------------------------------------------------

option('potext',
   type : 'boolean',
   value : false,
   description : 'Build the linkage test program with potext_support.'
)

#****************************************************************************
# meson.options (xml66)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
