#*****************************************************************************
# meson.build (xml66/src)
#-----------------------------------------------------------------------------
##
# \file        src/meson.build
# \library     xml66
# \author      Chris Ahlstrom
# \date        2026-02-20
# \updates     2026-02-20
# \license     $XPC_SUITE_GPL_LICENSE$
#
#  This file is part of the "xml66" library. See the top-level meson.build
#  file for license information.
#
#  Here we locate the library source-code files.  They reside in:
#
#     -  src. The main include directory for non-namespace code.
#     -  src/cfg. Contains code for parsing command lines.
#
#-----------------------------------------------------------------------------

libxml66_sources += files(
   'xml66.cpp',
   'xml/xml66xx.cpp'
   )

#****************************************************************************
# meson.build (xml66/src)
#----------------------------------------------------------------------------
# vim: ts=3 sw=3 ft=meson
#----------------------------------------------------------------------------
